subiendo la pagina a vercel

--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,10 @@
 
 *{
     font-family: montserrat;
-    color: #343434;
+    color: #365F3D;
 }
 
 body{
-    background-color: #FAF9F8;
+    background-color: #F0EEE3;
 }
 
